basic structure completed

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -23,10 +23,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="@string/question_number_1_1000"
+            android:layout_marginTop="24dp"
+            android:text="@{question.message}"
             android:textColor="@android:color/black"
+            tools:text="@string/question_number_1_1000"
             android:padding="16dp"
-            android:textSize="24sp"/>
+            android:textSize="22sp"/>
+
         <TextView
             android:id="@+id/textView_question"
             android:layout_width="match_parent"
