handling of screen rotation and icon added

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -126,6 +126,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
                 android:background="@drawable/btn_background_submit"
                 android:text="@string/submit"
                 android:textColor="@android:color/white"
